Fix contrast in buttons to execute dashboard actions
The colors we were using didn't meet the minimum contrast required for
UI elements.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -150,12 +150,12 @@
 
   .checked-link {
     @include has-fa-icon(check, solid);
-    color: $check;
+    color: $color-success;
   }
 
   .unchecked-link {
     @include has-fa-icon(square, regular);
-    color: $border;
+    color: $dark-gray;
   }
 }
 
